# awesome-agent4edu

./: .gitignore  CLAUDE_SKILLS.md  CLAUDE_SKILLS_EN.md  README.md  README_CN.md  add_ppt_skills.py  cleanup_repos.py  download_all_repos.py  fetch_full_repos.py  fetch_readmes.py  fetch_repos.py  fill_placeholders.py  fix_missing_repos.py  generate_markdown.py  import_local_repo.py  import_skills.py  index.html  merge_categories.py  package-lock.json  package.json  reclassify_skills.py  redownload_empty.py  split_ppt_category.py  tailwind.config.js  trim_to_readme.py  update_all_meta.py  update_skills_meta.py  vite.config.js
data/repos/calculator/content/: README.md  pyproject.toml
data/repos/calculator/content/src/mcp_server_calculator/: __init__.py  __main__.py
data/repos/calculator/content/tests/: test_calculator.py
data/repos/chemmcp/content/: .gitignore  .gitmodules  pyproject.toml  requirements.txt
data/repos/chemmcp/content/scripts/: generate_tools_doc.py  modules_utils.py
data/repos/chemmcp/content/src/chemmcp/: __main__.py
data/repos/jupyter_notebook_mcp/content/: .dockerignore  ARCHITECTURE.md  LICENSE  pyproject.toml
data/repos/jupyter_notebook_mcp/content/dev/content/: notebook.ipynb
data/repos/jupyter_notebook_mcp/content/docs/: babel.config.js
data/repos/jupyter_notebook_mcp/content/jupyter-config/jupyter_server_config.d/: jupyter_mcp_server.json
data/repos/jupyter_notebook_mcp/content/jupyter_mcp_server/: __init__.py  __version__.py  enroll.py  log.py
data/repos/jupyter_notebook_mcp/content/jupyter_mcp_server/jupyter_extension/: extension.py
data/repos/jupyter_notebook_mcp/content/jupyter_mcp_server/tools/: __init__.py  _base.py  execute_cell_tool.py  jupyter_cite_prompt.py  list_files_tool.py  list_kernels_tool.py  list_notebooks_tool.py  overwrite_cell_source_tool.py  read_cell_tool.py  unuse_notebook_tool.py  use_notebook_tool.py
data/repos/jupyter_notebook_mcp/content/mcpb/: .mcpbignore  manifest.json  pyproject.toml
data/repos/jupyter_notebook_mcp/content/tests/: __init__.py  conftest.py  test_common.py  test_config.py  test_prompts.py
data/repos/materials_project_mcp/content/servers/example-server/: pyproject.toml
data/repos/materials_project_mcp/content/servers/gpaw-computation/: pyproject.toml
data/repos/materials_project_mcp/content/servers/python-code-execution/: pyproject.toml
data/repos/materials_project_mcp/content/servers/ssh-exec/: README.md  pyproject.toml
data/repos/materials_project_mcp/content/servers/txyz-search/: .env_example  Dockerfile  pyproject.toml
data/repos/matmcp/content/: CHANGELOG.md  mcp_server.py  progress_summary.md  pyproject.toml
data/repos/mcp_js/content/server/: Cargo.toml
data/repos/mcp_js/content/server/src/: cluster.rs  lib.rs  mcp.rs  run_js_tool_stateless.md
data/repos/mcp_js/content/server/tests/: cluster_simulation.rs  cluster_write_forwarding.rs  console_log_e2e.rs  heap_limit.rs  heap_tags.rs  http_e2e.rs  http_integration.rs  stdio_integration.rs  wasm.rs
data/repos/netket_mcp/content/: CITATION.cff  README.md  pyproject.toml
data/repos/netket_mcp/content/servers/gpaw-computation/: CITATION.cff
data/repos/openzim_mcp/content/: .gitignore  pyproject.toml
data/repos/openzim_mcp/content/docs/: RELEASE_PROCESS_GUIDE.md  REPOSITORY_SETUP.md  SIMPLE_MODE_GUIDE.md
data/repos/openzim_mcp/content/openzim_mcp/: constants.py  defaults.py  error_messages.py  exceptions.py  security.py  timeout_utils.py
data/repos/openzim_mcp/content/scripts/: check_tools.py  clean_test_data.py  run_server.py  run_with_env.py
data/repos/openzim_mcp/content/tests/: test_config.py  test_diagnostics.py  test_error_messages.py  test_integration.py  test_metadata_tools_extended.py  test_navigation_tools.py  test_regex_security.py  test_security.py  test_zim_operations.py
data/repos/openzim_mcp/content/website/: sitemap.xml
data/repos/openzim_mcp/content/wiki-content/: Architecture-Overview.md  Configuration-Guide.md  Home.md  Installation-Guide.md  Multi-Instance-Management-Guide.md  Performance-Optimization-Guide.md  Quick-Start-Tutorial.md
data/repos/rdkit_mcp_server/content/: .gitignore  list_tools.py  pyproject.toml  run_client.py  run_server.py
data/repos/rdkit_mcp_server/content/evals/: __init__.py  task.py
data/repos/rdkit_mcp_server/content/rdkit_mcp/: __init__.py  decorators.py  types.py
data/repos/rdkit_mcp_server/content/tests/: test_base_tools.py  test_compute_descriptors.py
data/repos/ucsc_genome_browser/content/: claude_desktop_config_example.py  pyproject.toml  validate_api.py
data/repos/wikipedia_mcp/content/: .flake8  AGENTS.md  CODE_OF_CONDUCT.md  PUBLISHING_GUIDE.md  README.md  pyproject.toml  pytest.ini  release_payload.json
data/repos/wikipedia_mcp/content/docs/: API.md  ARCHITECTURE.md  USER_GUIDE.md
data/repos/wikipedia_mcp/content/tests/: test_access_token.py  test_auth_modes.py  test_coordinates.py  test_language_variants.py  tool_helpers.py
data/repos/wikipedia_mcp/content/wikipedia_mcp/: auth_config.py
data/repos/wolfram_alpha_mcp/content/: Dockerfile  README.md  config.json.example  pyproject.toml
public/data/repos/academic-writing-skills/content/: pyproject.toml
public/data/repos/biothings_mcp/content/: pyproject.toml
public/data/repos/bullet_mcp_server/content/: pyproject.toml
public/data/repos/docker_mcp/content/: Dockerfile  pyproject.toml
public/data/repos/fermat_math_engine/content/: pyproject.toml  server.py
public/data/repos/multi-agent_study_assistant/content/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FILE_GUIDE.md  QUICKSTART.md  agent_handler.py  config.py  docker-compose.yml  prompts.yaml  pyproject.toml  rag_helper.py  requirements.txt
public/data/repos/neovim_mcp/content/: CHANGELOG.md  Cargo.toml  flake.nix
public/data/repos/neovim_mcp/content/src/: lib.rs
public/data/repos/office-powerpoint-mcp-server/content/: .gitignore  __init__.py  mcp_config_sample.json  pyproject.toml  smithery.yaml
public/data/repos/pandoc_mcp/content/: .gitignore  CHEATSHEET.md  CONTRIBUTING.md  Dockerfile  pyproject.toml
(+4808 files in other folders)
