[project]
name = "mcp-server-calculator"
version = "0.2.0"
description = "A Model Context Protocol server for calculating"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "He Jie", email = "hejie6173@gmail.com" }]
keywords = ["mcp", "llm", "math", "calculator"]
license = { text = "MIT" }
urls = { Source = "https://github.com/githejie/mcp-server-calculator" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.4.1",
]

[project.scripts]
mcp-server-calculator = "mcp_server_calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
