[project]
name = "openzim-mcp"
version = "0.8.3"
description = "OpenZIM MCP - ZIM MCP Server that enables AI models to access and search ZIM format knowledge bases offline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
maintainers = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
keywords = [
    "zim",
    "openzim",
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "knowledge-base",
    "offline",
    "wikipedia",
    "search",
    "libzim",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "libzim>=3.8.0",
    "mcp[cli]>=1.23.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/cameronrye/openzim-mcp"
Repository = "https://github.com/cameronrye/openzim-mcp.git"
Issues = "https://github.com/cameronrye/openzim-mcp/issues"
Changelog = "https://github.com/cameronrye/openzim-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cameronrye/openzim-mcp#readme"
"Security Policy" = "https://github.com/cameronrye/openzim-mcp/blob/main/SECURITY.md"
"Contributing" = "https://github.com/cameronrye/openzim-mcp/blob/main/CONTRIBUTING.md"

[project.scripts]
openzim-mcp = "openzim_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openzim_mcp*"]



[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88



[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "libzim"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=openzim_mcp --cov-report=html --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["openzim_mcp"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.4.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.8.0",
]

[tool.bandit]
exclude_dirs = ["tests", "test_data", "scripts"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
