[project]
name = "mcp-wolfram-alpha"
version = "0.2.2"
description = "A MCP server to connect to wolfram alpha API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "httpx>=0.28.1",
 "mcp>=1.2.0",
]
[[project.authors]]
name = "TerminalMan"
email = "84923604+SecretiveShell@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-wolfram-alpha = "mcp_wolfram_alpha:main"
