[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "787cc015b719773f66d4ac32e695b9a0079e12ef", features = ["transport-io", "transport-sse-server", "transport-streamable-http-server"] }

# rmcp = { version = "0.1.5", }
serde = "=1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "process", "signal", "time", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
deno_core = "0.381"
deno_error = "0.7"
aws-config = "0.0.26-alpha"
aws-sdk-s3 = "0.0.26-alpha"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
swc_core = { version = "17", features = [
    "common",
    "ecma_codegen",
    "ecma_parser",
    "ecma_transforms",
    "ecma_transforms_typescript",
    "ecma_visit",
] }
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.5.2", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
tokio-util = "0.7"
rand = "0.8"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
futures = "0.3"
wasmparser = "0.225"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "6"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"