[project]
name = "academic-writing-skills"
version = "2.0.0"
description = "LaTeX academic writing assistant skills for Claude Code, supporting both English papers and Chinese theses with format checking, compilation, grammar analysis, and de-AI polishing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=12.1.0"]
authors = [{ name = "bahayonghang" }]
keywords = [
    "latex",
    "academic-writing",
    "claude-code",
    "paper-writing",
    "thesis",
    "grammar-check",
    "format-check",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "ruff>=0.15.4", "pyright>=1.1.390"]

[project.urls]
Homepage = "https://github.com/bahayonghang/academic-writing-skills"
Documentation = "https://github.com/bahayonghang/academic-writing-skills/tree/main/docs"
Repository = "https://github.com/bahayonghang/academic-writing-skills"
Issues = "https://github.com/bahayonghang/academic-writing-skills/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["academic-writing-skills"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["academic-writing-skills"]

[tool.pyright]
include = ["academic-writing-skills", "tests"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "docs"]
pythonVersion = "3.10"
typeCheckingMode = "off"
reportMissingImports = false
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
