[project]
name = "study-assistant"
version = "0.1.0"
description = "Multi-Agent Study Assistant with RAG capabilities for personalized learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "duckduckgo-search>=8.0.1",
    "groq>=0.11.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-chroma>=0.1.4",
    "openai>=1.75.0",
    "phidata>=2.7.10",
    "pypdf>=5.1.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "typing-extensions>=4.13.2",
]
