[package]
name = "nvim-mcp"
version = "0.7.2"
edition = "2024"
rust-version = "1.88.0"
description = "MCP server for Neovim"
documentation = "https://docs.rs/nvim-mcp"
homepage = "https://github.com/linw1995/nvim-mcp#readme"
repository = "https://github.com/linw1995/nvim-mcp"
readme = "README.md"
keywords = ["automation", "mcp", "neovim"]
categories = ["development-tools"]
license = "MIT"
include = [
  "/src",
  "/build.rs",
  "/docs/instructions.md",
  "/docs/tools/",
  "/.packaged-commit",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[dependencies]
# Async Runtime and Concurrency
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.48", features = ["full"] }

# Error Handling
thiserror = "2.0"

# Logging and Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# MCP Protocol Implementation
rmcp = { version = "0.14", features = [
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "client",
] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = [
  "server",
  "service",
  "tokio",
  "http2",
] }

# Neovim Integration
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rmpv = "1.3"

# Serialization
serde = "1.0.228"
serde_json = "1.0.145"
schemars = "1.2"

# JSON Schema Validation
jsonschema = "0.33"

# File System Operations
glob = "0.3"

# Multi-connection Support
dashmap = "6.1"
regex = "1.12"
blake3 = "1.5"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
rand = "0.9.2"
tempfile = "3.24"

[build-dependencies]
chrono = { version = "0.4" }
