[project]
name = "example-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-example-server = "example_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
