[project]
name = "gpaw-computation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "PathIntegral Institute", email = "info@pathintegral.xyz" }]
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.10",
    "ipython>=9.1.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "mp-api>=0.45.3",
    "pymatgen>=2025.3.10",
    "kaleido==0.2.1",
]

[project.scripts]
mcp-gpaw-computation = "gpaw_computation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
