[project]
name = "txyz-search"
version = "0.1.0"
description = "TXYZ Search MCP Server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
]

[project.scripts]
mcp-txyz-search = "txyz_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
